# celestia-zkevm-ibc-demo

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  docker-compose.rollkit.yml  docker-compose.sov.yml  docker-compose.yml  go.mod  go.sum
.github/: setup.yml
.github/setup/: action.yml
.github/workflows/: foundry-test.yml  lint.yml  rust.yml  test.yml
.trunk/: trunk.yaml
docker/: celestia_prover.Dockerfile  evm_prover.Dockerfile  indexer.Dockerfile  simapp.Dockerfile
docs/: ARCHITECTURE.md  CONTRIBUTING.md  leap.md  metamask.md
elf/: mock-membership-elf
ibc/lightclients/groth16/: celestia_consts.go  client_state.go  codec.go  consensus_state.go  consts.go  doc.go  groth16.pb.go  header.go  header_test.go  integration_test.go  key.go  light_client_module.go  module.go  store.go  update.go  upgrade.go  witness.go
ibc/mpt/: mpt.go  mpt_test.go
indexer/: README.md  eth_celestia_mapping.db  go.mod  go.sum  main.go
programs/sp1/mock-membership/: Cargo.toml
programs/sp1/mock-membership/src/: lib.rs  main.rs
programs/sp1/mock-update-client/: Cargo.toml
programs/sp1/mock-update-client/src/: main.rs
proto/ibc/lightclients/groth16/v1/: groth16.proto
proto/prover/v1/: prover.proto
provers/blevm/: Cargo.toml  README.md
provers/blevm/blevm/: Cargo.toml
provers/blevm/blevm-aggregator/: Cargo.toml
provers/blevm/blevm-aggregator-mock/: Cargo.toml
provers/blevm/blevm-aggregator-mock/src/: buffer.rs  main.rs
provers/blevm/blevm-aggregator/src/: buffer.rs  main.rs
provers/blevm/blevm-mock/: Cargo.toml
provers/blevm/blevm-mock/src/: main.rs
provers/blevm/blevm-prover/: Cargo.toml
provers/blevm/blevm-prover/src/: indexer.rs  lib.rs  proofs.rs  prover.rs  rsp.rs
provers/blevm/blevm/src/: main.rs
provers/blevm/common/: Cargo.toml
provers/blevm/common/src/: lib.rs
provers/blevm/script/: Cargo.toml  build.rs  header.json  nmt_multiproofs.json  row_root_multiproof.json
provers/celestia-prover/: .env  Cargo.toml  README.md
provers/celestia-prover/elf/: mock-membership-elf  mock-update-client-elf
provers/celestia-prover/programs/sp1/mock-membership/: Cargo.toml
provers/celestia-prover/programs/sp1/mock-membership/src/: lib.rs  main.rs
provers/celestia-prover/programs/sp1/mock-update-client/: Cargo.toml
provers/celestia-prover/programs/sp1/mock-update-client/src/: main.rs
provers/celestia-prover/prover/: Cargo.toml  build.rs
provers/celestia-prover/prover/src/: lib.rs  main.rs  programs.rs  prover.rs
provers/celestia-prover/src/: lib.rs  main.rs  programs.rs  prover.rs
provers/client/: prover.pb.go  prover_grpc.pb.go
provers/evm-prover/: .env.example  ARCHITECTURE.md  Cargo.toml  README.md  build.rs
provers/evm-prover/src/: main.rs
relayer/: main.go
runner-mock-membership/: Cargo.toml  README.md
runner-mock-membership/src/: main.rs
scripts/: protocgen.sh
simapp/: app.go  txclient.go  upgrades.go
simapp/simd/cmd/: root.go
simapp/upgrades/: upgrades.go
testing/demo/pkg/client/: doc.go
testing/demo/pkg/debug-client-state/: main.go
testing/demo/pkg/debug-contracts/: main.go
testing/demo/pkg/debug-key/: main.go
testing/demo/pkg/debug-txhash/: main.go
testing/demo/pkg/ethereum/: beaconapi.go  doc.go  ethapi.go  ethereum.go  ethereumtypes.go  utils.go
testing/demo/pkg/relay/: main.go
testing/demo/pkg/relay-v2/: ethereum.go  main.go
testing/demo/pkg/setup/: consts.go  counterparty.go  groth16.go  initialise_groth16_client.go  initialise_sp1tm_client.go  main.go  tendermint.go  utils.go
testing/demo/pkg/setup-env/: setup-env.go
testing/demo/pkg/sp1-gnark/: sp1_gnark.go
testing/demo/pkg/sp1-gnark/babybear/: babybear.go
testing/demo/pkg/sp1-gnark/poseidon2/: constants.go  poseidon2.go  poseidon2_babybear.go
testing/demo/pkg/testvalues/: doc.go  testvalues.go
testing/demo/pkg/transfer/: celestia_prover_utils.go  consts.go  eth_utils.go  evm_to_simapp_relay.go  main.go  query_balance.go  relay.go  simapp_to_evm_relay.go  transfer.go  update_client.go  update_groth16_client.go  update_tendermint_client.go  verifier_keys.go
testing/demo/pkg/utils/: contract_addresses.go  health.go  utils.go
testing/files/: celestia_rollup_config.toml  entrypoint.sh
testing/files/celestia-validator/config/: config.toml
testing/files/simapp-validator/config/: app.toml  config.toml  genesis.json
testing/files/sovereign-genesis/celestia/: evm.json
x/header/: module.go
