[workspace]
members = [
    "provers/celestia-prover/prover",
    "provers/celestia-prover/programs/sp1/mock-update-client",
    "provers/celestia-prover/programs/sp1/mock-membership",
    "provers/evm-prover",
]
resolver = "2"

[workspace.package]
repository = "https://github.com/celestiaorg/celestia-zkevm-ibc-demo"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
alloy = { version = "0.9.2", features = ["providers"] }
alloy-primitives = "0.9.2"
alloy-provider = { version = "0.9.2", features = ["default"] }
alloy-sol-types = { version = "0.8.0", default-features = false }
ibc-client-tendermint-types = "0.56"
ibc-core-commitment-types = "0.56"
ibc-proto = { version = "0.51", default-features = false }
ibc-proto-eureka = { package = "ibc-proto", git = "https://github.com/srdtrk/ibc-proto-rs", rev = "9f550f7a582f09ee82bdf58a416631715e15bad7", default-features = false }
prost = "0.13"
reqwest = { version = "0.12", features = ["json"] }
tendermint-rpc = "0.40"
tendermint = "0.40.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport", "codegen", "prost"] }
tonic-build = "0.12"
tonic-reflection = "0.12"
tracing = { version = "0.1", default-features = false }

sp1-sdk = { version = "4.1.2", default-features = false }
sp1-helper = "4.1.2"

# The rev in the following dependencies should match the commit used by the
# solidity-ibc-eureka submodule in this repo.
sp1-ics07-tendermint-prover = { git = "https://github.com/cosmos/solidity-ibc-eureka.git", rev = "b241dc76", default-features = false }
sp1-ics07-tendermint-utils = { git = "https://github.com/cosmos/solidity-ibc-eureka.git", rev = "b241dc76", default-features = false }
ibc-eureka-solidity-types = { git = "https://github.com/cosmos/solidity-ibc-eureka.git", rev = "b241dc76", default-features = false }
