[workspace]
members = ["provers/celestia-prover/prover", "provers/evm-prover"]
resolver = "2"

[workspace.package]
repository = "https://github.com/celestiaorg/celestia-zkevm-ibc-demo"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
alloy = { version = "0.9.2", features = ["providers"] }
alloy-primitives = { version = "0.12.6" }
alloy-provider = { version = "0.12.6" }
alloy-sol-types = { version = "0.8.0", default-features = false }
bincode = "1.3.3"
ethers = { version = "2.0", features = ["ws", "rustls"] }
ibc-client-tendermint-types = "0.56"
ibc-core-commitment-types = "0.56"
ibc-proto = { version = "0.51", features = ["client"] }
ibc-proto-eureka = { package = "ibc-proto", git = "https://github.com/srdtrk/ibc-proto-rs", rev = "9f550f7a582f09ee82bdf58a416631715e15bad7", default-features = false }
nmt-rs = "*"
prost = "0.13"
reqwest = { version = "0.12", features = ["json"] }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.3", default-features = false }
reth-primitives = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false, features = [
    "alloy-compat",
    "optimism",
    "std",
] }
rsp-primitives = { git = "https://github.com/succinctlabs/rsp.git", rev= "837a8c04a29deadb576a75fcf56136f26ce5dd4d" }
rsp-client-executor = { git = "https://github.com/succinctlabs/rsp.git", rev= "837a8c04a29deadb576a75fcf56136f26ce5dd4d" }
rsp-host-executor = { git = "https://github.com/succinctlabs/rsp.git", rev= "837a8c04a29deadb576a75fcf56136f26ce5dd4d" }
rsp-rpc-db = { git = "https://github.com/succinctlabs/rsp.git", rev= "837a8c04a29deadb576a75fcf56136f26ce5dd4d" }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
sp1-sdk = { version = "4.0.1", default-features = false }
tendermint-rpc = "0.40"
tendermint = "0.40.1"
tendermint-proto = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport", "codegen", "prost"] }
tonic-build = "0.12"
tonic-reflection = "0.12"
tracing = { version = "0.1", default-features = false }
sp1-helper = "4.0.1"
celestia-types = "0.10"
celestia-rpc = "0.9"
sha3 = "0.10"
eq-common = "0.1.4"

# The rev in the following dependencies should match the commit used by the
# solidity-ibc-eureka submodule in this repo.
sp1-ics07-tendermint-prover = { git = "https://github.com/cosmos/solidity-ibc-eureka.git", rev = "b241dc76", default-features = false }
sp1-ics07-tendermint-utils = { git = "https://github.com/cosmos/solidity-ibc-eureka.git", rev = "b241dc76", default-features = false }
ibc-eureka-solidity-types = { git = "https://github.com/cosmos/solidity-ibc-eureka.git", rev = "b241dc76", default-features = false }
