[workspace]
members = ["blevm", "script", "blevm-aggregator", "blevm-prover", "common"]
resolver = "2"
edition = "2021"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.85.0"

[workspace.dependencies]
alloy-provider = { version = "0.12.6" }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
alloy-sol-types = "0.7.7"
rsp-client-executor = { git = "https://github.com/succinctlabs/rsp.git", branch="main" }
rsp-host-executor = { git = "https://github.com/succinctlabs/rsp.git", branch="main" }
rsp-primitives = { git = "https://github.com/succinctlabs/rsp.git", branch="main" }
rsp-rpc-db = { git = "https://github.com/succinctlabs/rsp.git", branch="main" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.3", default-features = false }
reth-primitives = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false, features = [
    "alloy-compat",
    "optimism",
    "std",
] }
celestia-types = { git = "https://github.com/S1nus/lumina.git", rev = "c2971dfbccc0b56a2ad61ea587ca84c11fcfb1a3" }
celestia-rpc = { git = "https://github.com/S1nus/lumina.git", rev = "c2971dfbccc0b56a2ad61ea587ca84c11fcfb1a3" }
tendermint-proto = "*"
tendermint = "*"
bincode = "1.3.3"
nmt-rs = "*"

sp1-sdk = "4.1.2"
sp1-zkvm = "4.1.2"
sp1-helper = "4.1.2"
sp1-build = "4.1.2"

[patch.crates-io]
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", tag = "patch-0.16.9-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-4.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
