[workspace]
members = ["blevm", "script", "blevm-aggregator", "blevm-prover", "common"]
resolver = "2"
edition = "2021"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.85.0"

[workspace.dependencies]
blevm-prover = { path = "blevm-prover" }
blevm-common = { path = "common" }

eq-common = "0.1.4"
alloy-provider.workspace = true
serde.workspace = true
alloy-sol-types = "0.7.7"
rsp-client-executor.workspace = true
rsp-host-executor.workspace = true
rsp-primitives.workspace = true
rsp-rpc-db.workspace = true
reth-chainspec.workspace = true
reth-primitives.workpace = true
celestia-types = "0.10"
celestia-rpc = "0.9"
tendermint-proto = "*"
tendermint = "*"
bincode = "1.3.3"
nmt-rs = "*"
sha3 = "0.10"

sp1-sdk.workspace = true
sp1-zkvm.workspace = true
sp1-helper.workspace = true
sp1-build.workspace = true

[patch.crates-io]
# TODO: update to 5.0?
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", tag = "patch-0.16.9-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-4.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
