[package]
name = "celestia-prover"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio = { workspace = true, features = ["full"] }
futures = "0.3"
tonic-reflection.workspace = true
tendermint-rpc = { workspace = true, features = ["http-client"] }
ibc-client-tendermint-types.workspace = true
reqwest.workspace = true
alloy = { workspace = true, features = ["providers"] }
alloy-provider = { workspace = true }
ibc-eureka-solidity-types.workspace = true
sp1-ics07-tendermint-prover.workspace = true
sp1-ics07-tendermint-utils.workspace = true

[build-dependencies]
tonic-build.workspace = true
