[package]
name = "evm-prover"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio = { workspace = true, features = ["full"] }
futures = "0.3"
tonic-reflection.workspace = true
tendermint-rpc = { workspace = true, features = ["http-client"] }
ibc-client-tendermint-types.workspace = true
reqwest.workspace = true
alloy = { workspace = true, features = ["providers"] }
alloy-provider = { workspace = true }
ibc-eureka-solidity-types.workspace = true
sp1-sdk = { workspace = true, features = ["network"] }
sp1-ics07-tendermint-prover.workspace = true
sp1-ics07-tendermint-utils.workspace = true
ibc-core-commitment-types = { workspace = true }
ibc-proto = { workspace = true }
dotenv = "0.15.0"
anyhow = "1.0.94"
bincode = "1.3.3"
serde = "1.0.217"
prost-types = "0.13.4"

[build-dependencies]
tonic-build.workspace = true
sp1-helper = "4.0.1"
