[package]
version = "0.1.0"
name = "blevm-aggregator"
edition = "2021"

[dependencies]
blevm-common = { path = "../common" }
hex-literal = "0.4.1"
alloy-sol-types = { workspace = true }
sp1-zkvm = { version = "3.0.0-rc4", features = ["verify"] }
rsp-client-executor = {workspace=true}
celestia-types = {workspace=true}
nmt-rs = "*"
reth-primitives = {workspace=true}
tendermint = {workspace=true}
tendermint-proto = {workspace=true}
bincode = {workspace=true}
hex = "0.4.3"
sha2 = "0.10.8"
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_cbor = "0.11.2"