[package]
version = "0.1.0"
name = "blevm-mock"
edition = { workspace = true }

[dependencies]
sp1-zkvm = { workspace = true }
blevm-common = { path = "../common" }
alloy-sol-types = { workspace = true }
rsp-client-executor = {workspace=true}
celestia-types = {workspace=true}
nmt-rs = "*"
reth-primitives = {workspace=true}
tendermint = {workspace=true}
tendermint-proto = {workspace=true}
bincode = {workspace=true}
clap = { workspace = true }
hex = "0.4.3"
