[package]
version = "0.1.0"
name = "blevm-prover"
edition = { workspace = true }

[dependencies]
eq-common = { workspace = true }
sha3 = {workspace=true}
sp1-sdk = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
celestia-types = {workspace=true}
celestia-rpc = {workspace=true}
tendermint-proto = {workspace=true}
tendermint = {workspace=true}
reth-primitives = {workspace=true}
bincode.workspace = true
rsp-client-executor = {workspace=true}
nmt-rs = {workspace=true}
tokio = { version = "1", features = ["full"] }
serde = {workspace=true}
alloy-provider.workspace = true
dotenv = "0.15.0"
eyre = "0.6.12"
reth-chainspec.workspace = true
rsp-host-executor = { workspace = true }
rsp-primitives.workspace = true
rsp-rpc-db.workspace = true
alloy-chains = "0.1.66"
reqwest = "0.12.15"
thiserror = "2.0.12"
base64 = "0.22.1"

[build-dependencies]
sp1-helper = { workspace=true }
