[package]
version = "0.1.0"
name = "blevm-script"
edition = "2021"
default-run = "blevm"

[[bin]]
name = "blevm"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = { workspace = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
celestia-types = { workspace = true }
celestia-rpc = { workspace = true }
tendermint-proto = { workspace = true }
tendermint = { workspace = true }
reth-primitives = { workspace = true }
bincode = { workspace = true }
rsp-client-executor = { workspace = true }
nmt-rs = { workspace = true }
tokio = { version = "1", features = ["full"] }
blevm-prover = { path = "../blevm-prover" }
dotenv = "0.15.0"

[build-dependencies]
sp1-helper = { workspace = true }
