[package]
name = "celestia-prover"
version = "0.1.0"
edition = { workspace = true }
members = [
    "../programs/sp1/mock-membership",
    "../programs/sp1/mock-update-client",
]

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio = { workspace = true, features = ["full"] }
futures = "0.3"
tonic-reflection.workspace = true
tendermint-rpc = { workspace = true, features = ["http-client"] }
ibc-client-tendermint-types.workspace = true
reqwest.workspace = true
alloy = { workspace = true, features = ["providers"] }
alloy-provider = { workspace = true }
ibc-eureka-solidity-types = { workspace = true, features = ["rpc"] }
sp1-ics07-tendermint-prover.workspace = true
sp1-ics07-tendermint-utils.workspace = true
ibc-core-commitment-types = { workspace = true }
dotenv = "0.15.0"
anyhow = "1.0.94"
sp1-prover = "4.0.0"
bincode = "1.3.3"
sp1-sdk = { workspace = true, features = ["network"] }
ibc-proto = { workspace = true }
tracing = { workspace = true }
serde_cbor = "0.11.2"
alloy-sol-types.workspace = true

[build-dependencies]
sp1-build = "4.0.1"
tonic-build = { workspace = true }

[features]
default = ["network"]
network = []
