[package]
name = "mock-membership"
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy-sol-types = { workspace = true, default-features = false }
ibc-core-commitment-types = { workspace = true }
ibc-eureka-solidity-types = { workspace = true }
sp1-zkvm = { version = "4.0.1" }
