[package]
name = "mock-update-client"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true, default-features = false }
ibc-client-tendermint-types = { workspace = true }
ibc-eureka-solidity-types = { workspace = true }
serde_cbor = { version = "0.11.2", default-features = false }
sp1-zkvm = { version = "4.0.1" }
