[package]
name = "update-client-fast"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true, default-features = false }
ibc-client-tendermint = { version = "0.56", default-features = false }
ibc-client-tendermint-types = { workspace = true }
ibc-eureka-solidity-types = { workspace = true, features = ["rpc"] }
sp1-zkvm = { version = "4.0.1" }

serde = { version = "1.0" }
serde_cbor = { version = "0.11.2" }
